--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -37,30 +37,42 @@ body {
 #chart-links path {
   fill: none;
   stroke: #ccc;
-  transition: opacity .5s linear, stroke .2s linear, stroke-width .5s linear;
-}
-#chart-links path.tree {
-  opacity: 1;
-}
-#chart-links path.timeline {
-  opacity: .1;
-  stroke-width: 5 !important;
+  transition: opacity .2s linear, stroke .5s linear;
+  pointer-events: auto;
 }
 
-#chart-links path.highlight {
-  stroke: #f30 !important;
+.tree #chart-links path {
+  
+}
+.timeline #chart-links path {
+  stroke-dasharray: 5;
+  animation: dash 5s linear infinite;
+}
+@keyframes dash {
+  to {
+    stroke-dashoffset: -100;
+  }
+}
+.graph #chart-links path {
+  
+}
+
+#chart-links path.select {
+  stroke: #34ffc0 !important;
   opacity: 1 !important;
 }
-#chart-links path.select {
-  stroke: #f30 !important;
-  opacity: 1 !important;
+#chart {
+  pointer-events: all !important;
 }
 #chart:hover .fade {
-  opacity: .1;
+  opacity: .2;
 }
 
 #d3-chart-interaction .chord, #d3-chart-interaction .user {
   transition: opacity .5s linear;
+}
+#d3-chart-interaction {
+  pointer-events: all !important;
 }
 #d3-chart-interaction:hover .fade {
   opacity: .1 !important;
