cambio de arquitectura y layout de selectores

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -3,13 +3,14 @@
     - rojo: #f30
 */
 
-body {
+#eskup-popup {
     width:600px;
     overflow-x:hidden;
     overflow-y:hidden;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     margin: 0px;
+    position: relative;
 }
 
 .nodisplay {
