--- a/src/css/dialog.css
+++ b/src/css/dialog.css
@@ -10,7 +10,7 @@
 .dlg {
 	margin-left: auto;
 	margin-right: auto;
-	width: 400px;
+	max-width: 600px;
 	background-color: #fff;
 	margin-top: 100px;
 	padding: 10px;
@@ -23,9 +23,9 @@
 	color:  black;
 }
 .dlg_extra {
-	margin-top: 10px;
-	max-height: 300px;
-	overflow-y: scroll;
+	/* margin-top: 10px; */
+	/* max-height: 300px; */
+	overflow-y: hidden;
 }
 .dlg .btn {
 	display: inline-block;
