--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -13,6 +13,8 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .mask {
@@ -39,7 +41,7 @@ body {
 }
 #chart-focus-links path {
   fill: none;
-  stroke: #59c093;
+  stroke: #666;
 }
 
 
