cambiada la interfaz de la clase de diálogos modales

--- a/src/css/d3Thread.css
+++ b/src/css/d3Thread.css
@@ -193,6 +193,12 @@ body {
 .tooltip-header {
   height: 15px;
 }
+.tooltip-header .close {
+  cursor: pointer;
+}
+.tooltip-header .close:hover {
+  color: #000;
+}
 .interaction-tooltip {
   width: 300px;
   font-size: 10px;
