--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -10,7 +10,7 @@
 	position: absolute;
 	left: 0;
 	top: 25px;
-	width: 130px;
+	width: 80px;
 	/* background-color: #f2f2f2; */
 	padding: 10px;
 }
@@ -18,17 +18,18 @@
 #toolbar {
 	position: absolute;
 	top: 0;
-	left: 150px;
-	/* padding: 2px; */
+	left: 100px;
+	padding: 2px;
 }
 
 #newmessage-container {
 	position: absolute;
-	left: 150px;
+	left: 100px;
 	top: 35px;
 	border: 1px solid #eee;
 	height: 130px;
-	width: 440px;
+	/* width: 440px; */
+	right: 0;
 }
 #newmessage {
 	outline: none;
@@ -128,7 +129,7 @@
 	padding: 7px 5px;
 	text-align: center;
 	/* font-weight: bold; */
-	font-size: 14px;
+	font-size: 12px;
 }
 #send {
 	background-color: #f30;
@@ -189,13 +190,13 @@
 	font-size: 14px;
 	font-weight: lighter;
 	float: left;
-	width: 130px;
+	width: 80px;
 	text-align: right;
 	margin: 0;
 }
 .send2 > div {
-	left: 140px;
-	margin-left: 140px;
+	/* left: 140px; */
+	margin-left: 90px;
 }
 
 .send2 ul {
