--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -3,7 +3,6 @@
 	overflow: hidden;
 	position: relative;
 	background-color: #fff;
-	/* margin-top: 10px; */
 }
 
 #commands {
@@ -11,7 +10,6 @@
 	left: 0;
 	top: 25px;
 	width: 80px;
-	/* background-color: #f2f2f2; */
 	padding: 10px;
 }
 
@@ -28,8 +26,7 @@
 	top: 35px;
 	border: 1px solid #eee;
 	height: 130px;
-	/* width: 440px; */
-	right: 0;
+	right: 8px;
 }
 #newmessage {
 	outline: none;
@@ -128,7 +125,6 @@
 	margin-top: 7px;
 	padding: 7px 5px;
 	text-align: center;
-	/* font-weight: bold; */
 	font-size: 12px;
 }
 #send {
@@ -161,10 +157,6 @@
 	color: #fff;
 }
 
-
-
-
-
 #destinations {
 	position: absolute;
 	left: 0;
@@ -181,7 +173,6 @@
 }
 .send2:after {
 	height: 0;
-	/* visibility: hidden; */
 	clear: both;
 	content: " ";
 	display: block;
@@ -195,7 +186,6 @@
 	margin: 0;
 }
 .send2 > div {
-	/* left: 140px; */
 	margin-left: 90px;
 }
 
