--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -5,6 +5,7 @@
 
 #eskup-popup {
     width:600px;
+    height: 600px;
     overflow-x:hidden;
     overflow-y:hidden;
     font-family: 'Open Sans', sans-serif;
@@ -51,7 +52,6 @@ a:hover {
 }
 
 .video {
-    /* margin-top:5px; */
     margin: 5px 0;
     width: 100%;
     height: 280px;
@@ -66,13 +66,6 @@ a:hover {
     background-color: #1e5070;
     color: #fff;
 }
-
-
-
-.container {
-
-}
-
 #profile-container {
     background-color: #1e5070;
     height: 0;
@@ -105,7 +98,7 @@ ul.navigator {
     color: #666;
     font-weight: 300;
     margin: 3px 0;
-    max-height: 320px;
+    max-height: 300px;
     overflow-y: auto;
 }
 ul.navigator li {
@@ -209,7 +202,7 @@ ul.navigator li:hover {
     text-align: right;
     padding: 15px 5px;
     position: relative;
-    height: 515px;
+    height: 524px;
 }
 
 #navigation h1 {
@@ -222,7 +215,7 @@ ul.navigator li:hover {
     float: right;
     background-color: #eee;
     width: 450px;
-    height: 590px;
+    height: 595px;
     overflow-y: hidden;
     overflow-x: hidden;
     margin-top: -45px;
@@ -520,7 +513,7 @@ form.search .button {
 #board-description .links li.eskup:before {
     content: " ";
     background-repeat: no-repeat;
-    background-image: url(/icon/eskup_logo.png);
+    background-image: url(/img/eskup_logo.png);
     width: 12px;
     height: 12px;
     background-size: 15px;
@@ -699,19 +692,19 @@ form.search .button {
     background-color: #f30;
     color: #fff;
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 300;
     height: 20px;
     padding: 5px;
     cursor: pointer;
-    /* margin: 0; */
-    /* width: 140px; */
-    /* pointer-events:auto; */
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
+    pointer-events:auto;
     margin: 5px;
+    border-radius: 3px;
+    cursor: pointer;
 }
 #edit-button:hover {
     background-color: #000;
@@ -867,12 +860,21 @@ form.search .button {
     border-bottom: 1px dotted #ddd;
     height: 40px;
 }
+.msg_header .author {
+    display: inline-block;
+    max-width: 260px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 .msg_header .time {
     margin-left: 8px;
     font-size: 12px;
     color: #aaa;
     text-decoration: none;
-    position: relative;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 .msg_header .time:hover {
     color: #666;
@@ -925,7 +927,7 @@ span.time-tooltip span:first-child {
 
     color: #aaa;
     position: absolute;
-    top: 20px;
+    top: 22px;
     left: 50px;
 }
 .msg_header .reply2link:before {
