--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -163,7 +163,8 @@
 	top: 170px;
 	font-size: 12px;
 	padding: 10px;
-	width: 555px;
+	/* width: 555px; */
+	right: 0;
 }
 
 .send2 {
@@ -193,14 +194,17 @@
 	padding: 0;
 	margin: 0;
 }
-.send2 ul.linear li {
+.send2 ul.linear > li {
 	list-style: none;
-	font-size: 12px;
+	float: left;
+	margin-right: 5px;
+	margin-bottom: 2px;
+}
+.send2 ul.linear > li.tag {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	background-color: #eee;
-	float: left;
 	max-width: 100px;
 	margin-right: 2px;
 	padding: 1px 3px;
@@ -209,6 +213,12 @@
 	font-size: 11px;
 	border-radius: 2px;
 	margin-bottom: 2px;
+}
+.send2 ul.linear > li:not(.finder) {
+	background-color: #eee;
+	padding: 0 2px;
+	font-size: 11px;
+	border-radius: 2px;
 }
 
 .send2 .del {
@@ -349,7 +359,9 @@
 .finder span.nickname {
 	font-weight: bold;
 }
-
-#search-theme.finder span.nickname {
+#send2user .finder span.nickname:before {
+	content: "@";
+}
+#send2theme .finder span.nickname {
 	display: none;
 }
