--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -1,3 +1,9 @@
+#editor-title {
+    font-size: 14px;
+	
+    font-weight: bold;
+    margin: 5px 10px;
+}
 #editor {
 	height: 300px;
 	overflow: hidden;
