casi terminado el editor de nuevos mensajes

--- a/src/css/dialog.css
+++ b/src/css/dialog.css
@@ -28,7 +28,8 @@
 	color:  black;
 }
 .dlg-content {
-	overflow-y: hidden;
+	overflow-y: scroll;
+	max-height: 350px;
 }
 .dlg .dlg-btn {
 	display: inline-block;
