--- a/src/css/dialog.css
+++ b/src/css/dialog.css
@@ -4,8 +4,8 @@
 	right: 0;
 	top: 0;
 	bottom: 0;
-	background-color: rgba(0,0,0,.6);
-	background-image: url('../img/modal-background.png');
+	background-color: rgba(0,0,0,.7);
+	/* background-image: url('../img/modal-background.png'); */
 	z-index: 1000;
 }
 .dlg {
@@ -21,7 +21,9 @@
 }
 #eskup-popup .dlg {
 	width: 450px;
-	max-height: 500px;
+	/* max-height: 500px; */
+	height: 480px;
+	margin-top: 50px;
 }
 .dlg-title {
 	font-size: 16px;
@@ -29,7 +31,7 @@
 }
 .dlg-content {
 	overflow-y: scroll;
-	max-height: 350px;
+	/* max-height: 400px; */
 }
 .dlg .dlg-btn {
 	display: inline-block;
