--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -5,8 +5,8 @@
     margin: 5px 10px;
 }
 #editor {
-	height: 300px;
-	overflow: hidden;
+	height: 260px;
+	overflow-y: scroll;
 	position: relative;
 	background-color: #fff;
 }
@@ -375,10 +375,10 @@
 /* el mensaje que se está contestando */
 #replying-message {
     border-bottom: 1px dotted #ccc;
-    border-top: 1px dotted #ccc;
+    /* border-top: 1px dotted #ccc; */
     max-height: 200px;
     overflow-y: scroll;
-    padding: 0 20px;
+    /* padding: 0 20px; */
 }
 #replying-message .msg_control {
     display: none;
