--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -740,6 +740,9 @@ form.search .button {
     padding: 10px;
     box-shadow: 0 1px 2px #d9d9d9;
 }
+.message.private {
+    border: 1px dotted #aaa;
+}
 .message.highlighted {
     border-color: #f30;
     box-shadow: 0px 0px 3px 0px rgba(255, 51, 0, .7);
