--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -8,7 +8,7 @@
     height: 600px;
     overflow-x:hidden;
     overflow-y:hidden;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     font-size: 14px;
     margin: 0px;
     position: relative;
@@ -19,8 +19,9 @@
 }
 
 .fa {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
 }
+
 .fa:before {
     font-family: 'fontawesome';
     display:  inline-block;
